cluster/apps/monitoring/dashboard/dashboard-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: HOST(`k8s.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: kubernetes-dashboard
          port: 80
  tls:
    secretName: ${SECRET_CERT}
