cluster/apps/monitoring/dashboard/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: HOST(`dashboard.${SECRET_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: internal-ipwhitelist
          namespace: traefik
      services:
        - name: kubernetes-dashboard
          port: 443
          serversTransport: mytransport
  tls:
    secretName: ${SECRET_CERT}
